--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <title></title>
         <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="index.js">
+        <meta charset="UTF-8"/>
+        <meta name="robots" content="index, follow"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"
     </head>
     <body>
         <h1 id="counterh1">Counter</h1>
