--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
-        <link rel="stylesheet" href="index.css">
         <meta charset="UTF-8"/>
         <meta name="robots" content="index, follow"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <div class="container">
         <h1 id="counterh1">Counter</h1>
         <h2 id="countel">0</h2>
         <div id="style">
@@ -17,5 +17,6 @@
         <button id="savebtn" onclick="save()">Save</button></br>
         <p id="saveel">Previous count:</p>
         <script src="index.js"></script>
+        </div>
     </body>
 </html>
